<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/current_activity_static_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btStop"
        android:layout_alignBottom="@+id/btStop"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:text="@string/start_service_bt_str" />

    <Button
        android:id="@+id/btStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="62dp"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/btStart"
        android:text="@string/stop_service_bt_str" />

    <TextView
        android:id="@+id/activity_show_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/click_start_str" />

    <ToggleButton
        android:id="@+id/trainin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:textOff="Training mode off"
        android:textOn="Training mode on" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/activity_show_label"
        android:layout_marginTop="25dp"
        android:entries="@array/activity_array"
        android:prompt="@string/activity_prompt" />

</RelativeLayout>